version 2/py-target/PdawParser.py
# Generated from Pdaw.g4 by ANTLR 4.11.1
# encoding: utf-8
from antlr4 import *
from io import StringIO
import sys
if sys.version_info[1] > 5:
	from typing import TextIO
else:
	from typing.io import TextIO


class PdawParser ( Parser ):

    grammarFileName = "Pdaw.g4"

    atn = ATNDeserializer().deserialize(serializedATN())

    decisionsToDFA = [ DFA(ds, i) for i, ds in enumerate(atn.decisionToState) ]

    sharedContextCache = PredictionContextCache()

    literalNames = [ "<INVALID>", "';'", "'{'", "'}'", "','", "'..'", "'@'", 
                     "'='", "'['", "']'", "'.'", "'('", "')'", "':'", "'*'", 
                     "'/'", "'*~'", "'/~'", "'+'", "'-'", "'+~'", "'-~'", 
                     "'%'", "'=='", "'!='", "'>='", "'<'", "'<='", "'in range'", 
                     "'import'", "'patch'", "'func'", "'block'", "'return'", 
                     "'>'", "'end'", "'if'", "'elif'", "'else'", "'for'" ]

    symbolicNames = [ "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "IMPORT", "PATCH", "FUNC", "BLOCK", "RETURN", 
                      "CONNECT", "END", "IF", "ELIF", "ELSE", "FOR", "VARTYPE", 
                      "IOLET", "NAME", "VARNAME", "SYMBOL", "NUMBER", "INTEGER", 
                      "FLOAT", "NL", "WS", "COMMENT" ]

    RULE_prog = 0
    RULE_importstmt = 1
    RULE_patchstmt = 2
    RULE_funcdefstmt = 3
    RULE_returnstmt = 4
    RULE_stmt = 5
    RULE_blockstmt = 6
    RULE_dotdotstmt = 7
    RULE_callstmt = 8
    RULE_nodedeclstmt = 9
    RULE_simpledeclstmt = 10
    RULE_list = 11
    RULE_slicedlist = 12
    RULE_connectionstmt = 13
    RULE_connectionelem = 14
    RULE_parameters = 15
    RULE_typedparams = 16
    RULE_argslist = 17
    RULE_typedargslist = 18
    RULE_arg = 19
    RULE_typedarg = 20
    RULE_suite = 21
    RULE_operation = 22
    RULE_ifstmt = 23
    RULE_expr = 24
    RULE_forstmt = 25

    ruleNames =  [ "prog", "importstmt", "patchstmt", "funcdefstmt", "returnstmt", 
                   "stmt", "blockstmt", "dotdotstmt", "callstmt", "nodedeclstmt", 
                   "simpledeclstmt", "list", "slicedlist", "connectionstmt", 
                   "connectionelem", "parameters", "typedparams", "argslist", 
                   "typedargslist", "arg", "typedarg", "suite", "operation", 
                   "ifstmt", "expr", "forstmt" ]

    EOF = Token.EOF
    T__0=1
    T__1=2
    T__2=3
    T__3=4
    T__4=5
    T__5=6
    T__6=7
    T__7=8
    T__8=9
    T__9=10
    T__10=11
    T__11=12
    T__12=13
    T__13=14
    T__14=15
    T__15=16
    T__16=17
    T__17=18
    T__18=19
    T__19=20
    T__20=21
    T__21=22
    T__22=23
    T__23=24
    T__24=25
    T__25=26
    T__26=27
    T__27=28
    IMPORT=29
    PATCH=30
    FUNC=31
    BLOCK=32
    RETURN=33
    CONNECT=34
    END=35
    IF=36
    ELIF=37
    ELSE=38
    FOR=39
    VARTYPE=40
    IOLET=41
    NAME=42
    VARNAME=43
    SYMBOL=44
    NUMBER=45
    INTEGER=46
    FLOAT=47
    NL=48
    WS=49
    COMMENT=50

    def __init__(self, input:TokenStream, output:TextIO = sys.stdout):
        super().__init__(input, output)
        self.checkVersion("4.11.1")
        self._interp = ParserATNSimulator(self, self.atn, self.decisionsToDFA, self.sharedContextCache)
        self._predicates = None




    class ProgContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def patchstmt(self):
            return self.getTypedRuleContext(PdawParser.PatchstmtContext,0)


        def importstmt(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(PdawParser.ImportstmtContext)
            else:
                return self.getTypedRuleContext(PdawParser.ImportstmtContext,i)


        def NL(self, i:int=None):
            if i is None:
                return self.getTokens(PdawParser.NL)
            else:
                return self.getToken(PdawParser.NL, i)

        def funcdefstmt(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(PdawParser.FuncdefstmtContext)
            else:
                return self.getTypedRuleContext(PdawParser.FuncdefstmtContext,i)


        def stmt(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(PdawParser.StmtContext)
            else:
                return self.getTypedRuleContext(PdawParser.StmtContext,i)


        def getRuleIndex(self):
            return PdawParser.RULE_prog

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterProg" ):
                listener.enterProg(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitProg" ):
                listener.exitProg(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitProg" ):
                return visitor.visitProg(self)
            else:
                return visitor.visitChildren(self)




    def prog(self):

        localctx = PdawParser.ProgContext(self, self._ctx, self.state)
        self.enterRule(localctx, 0, self.RULE_prog)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 56
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while _la==29 or _la==48:
                self.state = 54
                self._errHandler.sync(self)
                token = self._input.LA(1)
                if token in [29]:
                    self.state = 52
                    self.importstmt()
                    pass
                elif token in [48]:
                    self.state = 53
                    self.match(PdawParser.NL)
                    pass
                else:
                    raise NoViableAltException(self)

                self.state = 58
                self._errHandler.sync(self)
                _la = self._input.LA(1)

            self.state = 59
            self.patchstmt()
            self.state = 63
            self._errHandler.sync(self)
            _alt = self._interp.adaptivePredict(self._input,2,self._ctx)
            while _alt!=2 and _alt!=ATN.INVALID_ALT_NUMBER:
                if _alt==1:
                    self.state = 60
                    self.match(PdawParser.NL) 
                self.state = 65
                self._errHandler.sync(self)
                _alt = self._interp.adaptivePredict(self._input,2,self._ctx)

            self.state = 70
            self._errHandler.sync(self)
            _alt = self._interp.adaptivePredict(self._input,4,self._ctx)
            while _alt!=2 and _alt!=ATN.INVALID_ALT_NUMBER:
                if _alt==1:
                    self.state = 68
                    self._errHandler.sync(self)
                    token = self._input.LA(1)
                    if token in [31]:
                        self.state = 66
                        self.funcdefstmt()
                        pass
                    elif token in [48]:
                        self.state = 67
                        self.match(PdawParser.NL)
                        pass
                    else:
                        raise NoViableAltException(self)
             
                self.state = 72
                self._errHandler.sync(self)
                _alt = self._interp.adaptivePredict(self._input,4,self._ctx)

            self.state = 76
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while ((_la) & ~0x3f) == 0 and ((1 << _la) & 295291894874432) != 0:
                self.state = 73
                self.stmt()
                self.state = 78
                self._errHandler.sync(self)
                _la = self._input.LA(1)

            self.state = 79
            self.match(PdawParser.T__0)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ImportstmtContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def IMPORT(self):
            return self.getToken(PdawParser.IMPORT, 0)

        def NAME(self):
            return self.getToken(PdawParser.NAME, 0)

        def NL(self):
            return self.getToken(PdawParser.NL, 0)

        def getRuleIndex(self):
            return PdawParser.RULE_importstmt

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterImportstmt" ):
                listener.enterImportstmt(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitImportstmt" ):
                listener.exitImportstmt(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitImportstmt" ):
                return visitor.visitImportstmt(self)
            else:
                return visitor.visitChildren(self)




    def importstmt(self):

        localctx = PdawParser.ImportstmtContext(self, self._ctx, self.state)
        self.enterRule(localctx, 2, self.RULE_importstmt)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 81
            self.match(PdawParser.IMPORT)
            self.state = 82
            self.match(PdawParser.NAME)
            self.state = 83
            self.match(PdawParser.NL)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class PatchstmtContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def PATCH(self):
            return self.getToken(PdawParser.PATCH, 0)

        def NAME(self):
            return self.getToken(PdawParser.NAME, 0)

        def NL(self):
            return self.getToken(PdawParser.NL, 0)

        def getRuleIndex(self):
            return PdawParser.RULE_patchstmt

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterPatchstmt" ):
                listener.enterPatchstmt(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitPatchstmt" ):
                listener.exitPatchstmt(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitPatchstmt" ):
                return visitor.visitPatchstmt(self)
            else:
                return visitor.visitChildren(self)




    def patchstmt(self):

        localctx = PdawParser.PatchstmtContext(self, self._ctx, self.state)
        self.enterRule(localctx, 4, self.RULE_patchstmt)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 85
            self.match(PdawParser.PATCH)
            self.state = 86
            self.match(PdawParser.NAME)
            self.state = 87
            self.match(PdawParser.NL)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class FuncdefstmtContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def FUNC(self):
            return self.getToken(PdawParser.FUNC, 0)

        def NAME(self):
            return self.getToken(PdawParser.NAME, 0)

        def typedparams(self):
            return self.getTypedRuleContext(PdawParser.TypedparamsContext,0)


        def suite(self):
            return self.getTypedRuleContext(PdawParser.SuiteContext,0)


        def NL(self, i:int=None):
            if i is None:
                return self.getTokens(PdawParser.NL)
            else:
                return self.getToken(PdawParser.NL, i)

        def returnstmt(self):
            return self.getTypedRuleContext(PdawParser.ReturnstmtContext,0)


        def getRuleIndex(self):
            return PdawParser.RULE_funcdefstmt

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterFuncdefstmt" ):
                listener.enterFuncdefstmt(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitFuncdefstmt" ):
                listener.exitFuncdefstmt(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitFuncdefstmt" ):
                return visitor.visitFuncdefstmt(self)
            else:
                return visitor.visitChildren(self)




    def funcdefstmt(self):

        localctx = PdawParser.FuncdefstmtContext(self, self._ctx, self.state)
        self.enterRule(localctx, 6, self.RULE_funcdefstmt)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 89
            self.match(PdawParser.FUNC)
            self.state = 90
            self.match(PdawParser.NAME)
            self.state = 91
            self.typedparams()
            self.state = 92
            self.match(PdawParser.T__1)
            self.state = 93
            self.suite()
            self.state = 95
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==33:
                self.state = 94
                self.returnstmt()


            self.state = 100
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while _la==48:
                self.state = 97
                self.match(PdawParser.NL)
                self.state = 102
                self._errHandler.sync(self)
                _la = self._input.LA(1)

            self.state = 103
            self.match(PdawParser.T__2)
            self.state = 104
            self.match(PdawParser.NL)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ReturnstmtContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def RETURN(self):
            return self.getToken(PdawParser.RETURN, 0)

        def VARNAME(self, i:int=None):
            if i is None:
                return self.getTokens(PdawParser.VARNAME)
            else:
                return self.getToken(PdawParser.VARNAME, i)

        def NL(self):
            return self.getToken(PdawParser.NL, 0)

        def getRuleIndex(self):
            return PdawParser.RULE_returnstmt

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterReturnstmt" ):
                listener.enterReturnstmt(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitReturnstmt" ):
                listener.exitReturnstmt(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitReturnstmt" ):
                return visitor.visitReturnstmt(self)
            else:
                return visitor.visitChildren(self)




    def returnstmt(self):

        localctx = PdawParser.ReturnstmtContext(self, self._ctx, self.state)
        self.enterRule(localctx, 8, self.RULE_returnstmt)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 106
            self.match(PdawParser.RETURN)
            self.state = 107
            self.match(PdawParser.VARNAME)
            self.state = 112
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while _la==4:
                self.state = 108
                self.match(PdawParser.T__3)
                self.state = 109
                self.match(PdawParser.VARNAME)
                self.state = 114
                self._errHandler.sync(self)
                _la = self._input.LA(1)

            self.state = 115
            self.match(PdawParser.NL)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class StmtContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def blockstmt(self):
            return self.getTypedRuleContext(PdawParser.BlockstmtContext,0)


        def NL(self):
            return self.getToken(PdawParser.NL, 0)

        def connectionstmt(self):
            return self.getTypedRuleContext(PdawParser.ConnectionstmtContext,0)


        def callstmt(self):
            return self.getTypedRuleContext(PdawParser.CallstmtContext,0)


        def nodedeclstmt(self):
            return self.getTypedRuleContext(PdawParser.NodedeclstmtContext,0)


        def simpledeclstmt(self):
            return self.getTypedRuleContext(PdawParser.SimpledeclstmtContext,0)


        def ifstmt(self):
            return self.getTypedRuleContext(PdawParser.IfstmtContext,0)


        def forstmt(self):
            return self.getTypedRuleContext(PdawParser.ForstmtContext,0)


        def getRuleIndex(self):
            return PdawParser.RULE_stmt

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterStmt" ):
                listener.enterStmt(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitStmt" ):
                listener.exitStmt(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitStmt" ):
                return visitor.visitStmt(self)
            else:
                return visitor.visitChildren(self)




    def stmt(self):

        localctx = PdawParser.StmtContext(self, self._ctx, self.state)
        self.enterRule(localctx, 10, self.RULE_stmt)
        try:
            self.state = 139
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,9,self._ctx)
            if la_ == 1:
                self.enterOuterAlt(localctx, 1)
                self.state = 117
                self.blockstmt()
                self.state = 118
                self.match(PdawParser.NL)
                pass

            elif la_ == 2:
                self.enterOuterAlt(localctx, 2)
                self.state = 120
                self.connectionstmt()
                self.state = 121
                self.match(PdawParser.NL)
                pass

            elif la_ == 3:
                self.enterOuterAlt(localctx, 3)
                self.state = 123
                self.callstmt()
                self.state = 124
                self.match(PdawParser.NL)
                pass

            elif la_ == 4:
                self.enterOuterAlt(localctx, 4)
                self.state = 126
                self.nodedeclstmt()
                self.state = 127
                self.match(PdawParser.NL)
                pass

            elif la_ == 5:
                self.enterOuterAlt(localctx, 5)
                self.state = 129
                self.simpledeclstmt()
                self.state = 130
                self.match(PdawParser.NL)
                pass

            elif la_ == 6:
                self.enterOuterAlt(localctx, 6)
                self.state = 132
                self.ifstmt()
                self.state = 133
                self.match(PdawParser.NL)
                pass

            elif la_ == 7:
                self.enterOuterAlt(localctx, 7)
                self.state = 135
                self.forstmt()
                self.state = 136
                self.match(PdawParser.NL)
                pass

            elif la_ == 8:
                self.enterOuterAlt(localctx, 8)
                self.state = 138
                self.match(PdawParser.NL)
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class BlockstmtContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def BLOCK(self):
            return self.getToken(PdawParser.BLOCK, 0)

        def NAME(self):
            return self.getToken(PdawParser.NAME, 0)

        def typedparams(self):
            return self.getTypedRuleContext(PdawParser.TypedparamsContext,0)


        def suite(self):
            return self.getTypedRuleContext(PdawParser.SuiteContext,0)


        def NL(self, i:int=None):
            if i is None:
                return self.getTokens(PdawParser.NL)
            else:
                return self.getToken(PdawParser.NL, i)

        def dotdotstmt(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(PdawParser.DotdotstmtContext)
            else:
                return self.getTypedRuleContext(PdawParser.DotdotstmtContext,i)


        def getRuleIndex(self):
            return PdawParser.RULE_blockstmt

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterBlockstmt" ):
                listener.enterBlockstmt(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitBlockstmt" ):
                listener.exitBlockstmt(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitBlockstmt" ):
                return visitor.visitBlockstmt(self)
            else:
                return visitor.visitChildren(self)




    def blockstmt(self):

        localctx = PdawParser.BlockstmtContext(self, self._ctx, self.state)
        self.enterRule(localctx, 12, self.RULE_blockstmt)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 141
            self.match(PdawParser.BLOCK)
            self.state = 142
            self.match(PdawParser.NAME)
            self.state = 143
            self.typedparams()
            self.state = 144
            self.match(PdawParser.T__1)
            self.state = 145
            self.suite()
            self.state = 149
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while _la==5:
                self.state = 146
                self.dotdotstmt()
                self.state = 151
                self._errHandler.sync(self)
                _la = self._input.LA(1)

            self.state = 155
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while _la==48:
                self.state = 152
                self.match(PdawParser.NL)
                self.state = 157
                self._errHandler.sync(self)
                _la = self._input.LA(1)

            self.state = 158
            self.match(PdawParser.T__2)
            self.state = 159
            self.match(PdawParser.NL)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class DotdotstmtContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def NL(self):
            return self.getToken(PdawParser.NL, 0)

        def connectionstmt(self):
            return self.getTypedRuleContext(PdawParser.ConnectionstmtContext,0)


        def nodedeclstmt(self):
            return self.getTypedRuleContext(PdawParser.NodedeclstmtContext,0)


        def callstmt(self):
            return self.getTypedRuleContext(PdawParser.CallstmtContext,0)


        def getRuleIndex(self):
            return PdawParser.RULE_dotdotstmt

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterDotdotstmt" ):
                listener.enterDotdotstmt(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitDotdotstmt" ):
                listener.exitDotdotstmt(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitDotdotstmt" ):
                return visitor.visitDotdotstmt(self)
            else:
                return visitor.visitChildren(self)




    def dotdotstmt(self):

        localctx = PdawParser.DotdotstmtContext(self, self._ctx, self.state)
        self.enterRule(localctx, 14, self.RULE_dotdotstmt)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 161
            self.match(PdawParser.T__4)
            self.state = 165
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,12,self._ctx)
            if la_ == 1:
                self.state = 162
                self.connectionstmt()
                pass

            elif la_ == 2:
                self.state = 163
                self.nodedeclstmt()
                pass

            elif la_ == 3:
                self.state = 164
                self.callstmt()
                pass


            self.state = 167
            self.match(PdawParser.NL)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class CallstmtContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def NAME(self):
            return self.getToken(PdawParser.NAME, 0)

        def parameters(self):
            return self.getTypedRuleContext(PdawParser.ParametersContext,0)


        def getRuleIndex(self):
            return PdawParser.RULE_callstmt

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterCallstmt" ):
                listener.enterCallstmt(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitCallstmt" ):
                listener.exitCallstmt(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitCallstmt" ):
                return visitor.visitCallstmt(self)
            else:
                return visitor.visitChildren(self)




    def callstmt(self):

        localctx = PdawParser.CallstmtContext(self, self._ctx, self.state)
        self.enterRule(localctx, 16, self.RULE_callstmt)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 169
            self.match(PdawParser.T__5)
            self.state = 170
            self.match(PdawParser.NAME)
            self.state = 171
            self.parameters()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class NodedeclstmtContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser


        def getRuleIndex(self):
            return PdawParser.RULE_nodedeclstmt

     
        def copyFrom(self, ctx:ParserRuleContext):
            super().copyFrom(ctx)



    class Nodedecl3Context(NodedeclstmtContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a PdawParser.NodedeclstmtContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def operation(self):
            return self.getTypedRuleContext(PdawParser.OperationContext,0)


        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterNodedecl3" ):
                listener.enterNodedecl3(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitNodedecl3" ):
                listener.exitNodedecl3(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitNodedecl3" ):
                return visitor.visitNodedecl3(self)
            else:
                return visitor.visitChildren(self)


    class Nodedecl2Context(NodedeclstmtContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a PdawParser.NodedeclstmtContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def NAME(self):
            return self.getToken(PdawParser.NAME, 0)
        def parameters(self):
            return self.getTypedRuleContext(PdawParser.ParametersContext,0)


        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterNodedecl2" ):
                listener.enterNodedecl2(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitNodedecl2" ):
                listener.exitNodedecl2(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitNodedecl2" ):
                return visitor.visitNodedecl2(self)
            else:
                return visitor.visitChildren(self)


    class Nodedecl1Context(NodedeclstmtContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a PdawParser.NodedeclstmtContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def VARNAME(self):
            return self.getToken(PdawParser.VARNAME, 0)
        def NAME(self):
            return self.getToken(PdawParser.NAME, 0)
        def parameters(self):
            return self.getTypedRuleContext(PdawParser.ParametersContext,0)


        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterNodedecl1" ):
                listener.enterNodedecl1(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitNodedecl1" ):
                listener.exitNodedecl1(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitNodedecl1" ):
                return visitor.visitNodedecl1(self)
            else:
                return visitor.visitChildren(self)


    class Nodedecl4Context(NodedeclstmtContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a PdawParser.NodedeclstmtContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def VARNAME(self):
            return self.getToken(PdawParser.VARNAME, 0)
        def operation(self):
            return self.getTypedRuleContext(PdawParser.OperationContext,0)


        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterNodedecl4" ):
                listener.enterNodedecl4(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitNodedecl4" ):
                listener.exitNodedecl4(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitNodedecl4" ):
                return visitor.visitNodedecl4(self)
            else:
                return visitor.visitChildren(self)



    def nodedeclstmt(self):

        localctx = PdawParser.NodedeclstmtContext(self, self._ctx, self.state)
        self.enterRule(localctx, 18, self.RULE_nodedeclstmt)
        self._la = 0 # Token type
        try:
            self.state = 187
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,15,self._ctx)
            if la_ == 1:
                localctx = PdawParser.Nodedecl1Context(self, localctx)
                self.enterOuterAlt(localctx, 1)
                self.state = 173
                self.match(PdawParser.VARNAME)
                self.state = 174
                self.match(PdawParser.T__6)
                self.state = 175
                self.match(PdawParser.NAME)
                self.state = 177
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                if _la==11:
                    self.state = 176
                    self.parameters()


                pass
